--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -52,7 +52,8 @@
   	    <!--<li><a href="welcome/qs"><i class="fa fa-university"></i> Quiénes somos</a></li>-->
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Iniciar sesión</a></li>
+        <li> <%=link_to "Iniciar sesión", :controller => :log, :action => :iniciar %> </li>
+
         <li><a href="#">Registrarse</a></li>
       </ul>
 
