Controlador de operador + img
Modificación de css, glunas img + controlador de operador

--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -53,8 +53,9 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li> <%=link_to "Iniciar sesión", :controller => :log, :action => :iniciar %> </li>
+        <li> <%=link_to "Registrarse", :controller => :log, :action => :registrar %> </li>
 
-        <li><a href="#">Registrarse</a></li>
+        
       </ul>
 
       <div class="navbar-collapse collapse">
@@ -99,15 +100,15 @@
 		© Copyright 2014 by ActiveCab. All Rights Reserved. 		
 	</div>
   </div>
-  
+  <!-- Subir facil -->
+<div id='IrArriba'>
+<a href=''></a>
+</div>
+<!---->
   
 </footer>
         <script src="../../assets/bootstrap.min.js"></script>
         <script src="../../assets/bootstrap.js"></script>
 
-<!-- Subir facil -->
-<div id='IrArriba'>
-<a href=''></a>
-</div>
-<!---->
+
 </html>
