--- a/ProyectoPBD/app/views/home/index.html.erb
+++ b/ProyectoPBD/app/views/home/index.html.erb
@@ -10,6 +10,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
+          <img src="../../assets/veloz.jpg" alt="">
           <img data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" alt="">
           <div class="container">
             <div class="carousel-caption">
@@ -20,6 +21,7 @@
           </div>
         </div>
         <div class="item">
+          <img src="../../assets/taxi2.jpg" alt="">
           <img data-src="holder.js/900x500/auto/#666:#6a6a6a/text:Second slide" alt="">
           <div class="container">
             <div class="carousel-caption">
@@ -30,6 +32,7 @@
           </div>
         </div>
         <div class="item">
+          <img src="../../assets/ciudad.jpg" alt="">
           <img data-src="holder.js/900x500/auto/#555:#5a5a5a/text:Third slide" alt="">
           <div class="container">
             <div class="carousel-caption">
