Javascript de bootsrapt
Agregar script de javascript para conectar bootsrap y hacer botones xD

--- a/ProyectoPBD/app/views/welcome/qs.html.erb
+++ b/ProyectoPBD/app/views/welcome/qs.html.erb
@@ -6,7 +6,8 @@
         <div class="row">
             <div class="col-lg-12 ">
 				<div class="row">
-					<div class="col-lg-6">
+					<div class="col-lg-6 col-md-4 col-xs-0">
+
 						<div class="borde"><i><h2>Mision</h2></i><br>						
 						<p>Esta empresa se dedica al traslado de pasajeros de manera segura, cuenta con un <b>personal capacitado</b> para atender a los clientes a cualquier hora del día.</p>
 						</div>
@@ -18,7 +19,7 @@
 						<p> Radio Taxis Marcelino es una empresa comprometida a brindar el mejor servicio para el usuario, entregando un grato y sencillo medio para solicitar radio taxis</p>
 						</div>
 					</div>
-					<div class="col-lg-6 borde">
+					<div class="col-lg-6 col-md-8 borde col-xs-12">
 						<i><h2>Radio Taxis Marcelino 3</h2></i><br>
 						<p>Con 25 años de experiencia en el transporte de pasajeros nos ha hecho una Empresa conocedora de los más altos requerimientos de los usuarios de este medio.
 						Contamos con una moderna flota de automóviles full equipo y transporte masivo de pasajeros (Van, Minibuses y Buses). Conductores profesionales, seleccionados rigurosamente por nuestro departamento de personal, dando plena seguridad al desplazamiento de nuestros clientes.</p>
