--- a/ProyectoPBD/app/views/conductor/calendario.html.erb
+++ b/ProyectoPBD/app/views/conductor/calendario.html.erb
@@ -1,2 +1,16 @@
 <h1>Conductor#calendario</h1>
 <p>Find me in app/views/conductor/calendario.html.erb</p>
+<div class="btn-group">
+  <button type="button" class="btn btn-danger">Action</button>
+  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
+    <span class="caret"></span>
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">Action</a></li>
+    <li><a href="#">Another action</a></li>
+    <li><a href="#">Something else here</a></li>
+    <li class="divider"></li>
+    <li><a href="#">Separated link</a></li>
+  </ul>
+</div>
