--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <link href="../../assets/bootstrap-theme.min.css" rel="stylesheet" type="text/css" />
   <link href="../../assets/bootstrap-theme.css" rel="stylesheet" type="text/css" />
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../">
+  <script src="../../assets/bootstrap.js" rel="stylesheet"></script>
   
  	<!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -107,8 +107,8 @@
 <!---->
   
 </footer>
-        <script src="../../assets/bootstrap.min.js"></script>
-        <script src="../../assets/bootstrap.js"></script>
+  <script src="../../assets/bootstrap.min.js"></script>
+  <script src="../../assets/bootstrap.js"></script>
 
 
 </html>
