--- a/ProyectoPBD/app/views/home/index.html.erb
+++ b/ProyectoPBD/app/views/home/index.html.erb
@@ -14,9 +14,9 @@
           <img data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <h1><b>ActiveCab</b></h1>
+              <p>Un servicio de alta velocidad y comodidad <code>http://www.activecab.cl</code> Pide un taxi sin necesidad de gastar en una llamada telefónica</p>
+              <p><a class="btn btn-lg btn-primary" href="cliente/solicitud" role="button">Pide un taxi AQUÍ</a></p>
             </div>
           </div>
         </div>
@@ -25,9 +25,9 @@
           <img data-src="holder.js/900x500/auto/#666:#6a6a6a/text:Second slide" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <b><h1>Confía en la experiencia.</h1></b>
+              <p>Una empresa dedicada con más de 25 años de experiencia y calidad en el área del transporte de pasajeros</p>
+              <p><a class="btn btn-lg btn-primary" href="welcome/qs" role="button">Leer más</a></p>
             </div>
           </div>
         </div>
@@ -36,9 +36,9 @@
           <img data-src="holder.js/900x500/auto/#555:#5a5a5a/text:Third slide" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <p><h1>Precios a tu alcance.</h1></p>
+              <p>Paga un precio justo de acuerdo a la distancia recorrida, ActiveCab permite que veas tarifas fijas de acuerdo a tu viaje a realizar</p>
+              <p><a class="btn btn-lg btn-primary" href="welcome/tarifas" role="button">Servicios y tarifas</a></p>
             </div>
           </div>
         </div>
