--- a/ProyectoPBD/app/views/welcome/qs.html.erb
+++ b/ProyectoPBD/app/views/welcome/qs.html.erb
@@ -17,7 +17,7 @@
 						<i><h2>Visión</h2></i><br>
 						<p>Ser una empresa de transporte lider en cuanto a <b>calidad</b> de servicio y <b>seguridad</b>.Con un alto grado de <b>compromiso</b> por parte de cada trabajador.</p>
 						<p> Radio Taxis Marcelino es una empresa comprometida a brindar el mejor servicio para el usuario, entregando un grato y sencillo medio para solicitar radio taxis</p>
-						</div>
+						</div><br>
 					</div>
 					<div class="col-lg-6 col-md-8 borde col-xs-12">
 						<i><h2>Radio Taxis Marcelino 3</h2></i><br>
