--- a/ProyectoPBD/app/views/operador/disp_conductor.html.erb
+++ b/ProyectoPBD/app/views/operador/disp_conductor.html.erb
@@ -1,2 +1,8 @@
 <h1>Operador#disp_conductor</h1>
-<p>Find me in app/views/operador/disp_conductor.html.erb</p>
+<ul class="nav nav-pills nav-stacked largo">
+  <li> <%=link_to "Distancia y valor", :controller => :operador, :action => :index %> </li>
+  <li class="active"> <%=link_to "Disponibilidad de conductores", :controller => :operador, :action => :disp_conductor %> </li>
+  <li> <%=link_to "Lista de solicitudes", :controller => :operador, :action => :solicitudes %> </li>
+  <li> <%=link_to "Lista de usuarios registrados", :controller => :operador, :action => :usuarios_reg %> </li>
+
+</ul>
