--- a/ProyectoPBD/app/views/operador/usuarios_reg.html.erb
+++ b/ProyectoPBD/app/views/operador/usuarios_reg.html.erb
@@ -1,9 +1,23 @@
 <h1>Operador#usuarios_reg</h1>
-<ul class="nav nav-pills nav-stacked largo">
-  <li> <%=link_to "Distancia y valor", :controller => :operador, :action => :index %> </li>
-  <li> <%=link_to "Disponibilidad de conductores", :controller => :operador, :action => :disp_conductor %> </li>
-  <li> <%=link_to "Lista de solicitudes", :controller => :operador, :action => :solicitudes %> </li>
-  <li class="active"> <%=link_to "Lista de usuarios registrados", :controller => :operador, :action => :usuarios_reg %> </li>
-  
 
-</ul>
+
+<div class="container">
+        <div class="row">
+            <div class="col-lg-12 ">
+				<ul class="nav nav-pills nav-stacked largo">
+				  <li> <%=link_to "Distancia y valor", :controller => :operador, :action => :index %> </li>
+				  <li> <%=link_to "Disponibilidad de conductores", :controller => :operador, :action => :disp_conductor %> </li>
+				  <li> <%=link_to "Lista de solicitudes", :controller => :operador, :action => :solicitudes %> </li>
+				  <li class="active"> <%=link_to "Lista de usuarios registrados", :controller => :operador, :action => :usuarios_reg %> </li>
+				  
+											
+				</ul>
+    
+
+            </div>
+
+        </div>      
+
+    </div>
+
+
