--- a/ProyectoPBD/app/assets/stylesheets/bootstrap.css
+++ b/ProyectoPBD/app/assets/stylesheets/bootstrap.css
@@ -33,7 +33,23 @@ footer{
   padding-bottom: 4rem;
 }
 .fa-car:hover,.amari:hover{
-  color: yellow;
+    color: yellow;
+    text-decoration: none;
+    color: #000;
+    display: block;
+    font-size: 1.4rem;
+    text-align: center;
+    height: auto;
+    color: #FFF;
+    margin: auto;
+    transition: all 0.5s ease 0s;
+    transition-property: all;
+    transition-duration: 0.8s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+    height: 10%;
+    width: 50%;
+
 }
 
 #IrArriba {
