--- a/ProyectoPBD/app/assets/stylesheets/welcome.css.scss
+++ b/ProyectoPBD/app/assets/stylesheets/welcome.css.scss
@@ -16,6 +16,16 @@ h1{
 	padding: 15px;
 
 }
+.whitec{
+  color: #fff;
+}
+.fijo1{
+  height: 30px;
+  display: block;
+
+
+
+}
 
 /* GLOBAL STYLES
 -------------------------------------------------- */
@@ -26,7 +36,11 @@ body {
   color: #5a5a5a;
 }
 
+.centro{
+  text-align:center;
+  padding-top: 4rem;
 
+}
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
