Gestiones de administrador agregadas
Se agregó el controlador gestiones y sus "hij@s". Gestion informacion,
gestion tarifas, gestion vehiculos, entre otras (las que no son gestion
de usuarios)

--- a/ProyectoPBD/app/views/gestion_usuarios/gestion_propietarios.html.erb
+++ b/ProyectoPBD/app/views/gestion_usuarios/gestion_propietarios.html.erb
@@ -1,5 +1,5 @@
-<h1>GestionUsuarios#gestion_propietarios</h1>
-<p class="centro1">Find me in app/views/gestion_usuarios/gestion_propietarios.html.erb</p>
+<h1>Gestión de Propietarios</h1>
+
 <div class="container">
         <div class="row">
             <div class="col-lg-12 ">
