--- a/ProyectoPBD/app/views/gestion_usuarios/gestion_operadores.html.erb
+++ b/ProyectoPBD/app/views/gestion_usuarios/gestion_operadores.html.erb
@@ -1,5 +1,4 @@
-<h1>GestionUsuarios#gestion_operadores</h1>
-<p>Find me in app/views/gestion_usuarios/gestion_operadores.html.erb</p>
+<h1>Gestión de Operadores</h1>
 <div class="container">
         <div class="row">
             <div class="col-lg-12 ">
