--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand"> <i class="fa fa-cab"></i> ActiveCab</a>
+      <a class="navbar-brand" href="#"> <i class="fa fa-cab"></i> ActiveCab</a>
     </div>
     <div class="collapse navbar-collapse">
 
@@ -107,8 +107,8 @@
 <!---->
   
 </footer>
-  <script src="../../assets/bootstrap.min.js" rel="stylesheet"></script>
-  <script src="../../assets/bootstrap.js" rel="stylesheet"></script>
+  <script src="../../assets/bootstrap.min.js"></script>
+  <script src="../../assets/bootstrap.js"></script>
 
 
 </html>
