--- a/ProyectoPBD/app/assets/stylesheets/welcome.css.scss
+++ b/ProyectoPBD/app/assets/stylesheets/welcome.css.scss
@@ -16,6 +16,26 @@ h1{
 	padding: 15px;
 
 }
++.whitec{
+   color: #fff;
+ }
+ .fijo1{
+   height: 30px;
+   display: block;
+ 
+ 
+ 
+ }
+ .centro{
+   text-align:center;
+   padding-top: 4rem;
+  
+ }
+.fijo1{
+   height: 30px;
+   display: block;
+}
+
 
 /* GLOBAL STYLES
 -------------------------------------------------- */
