--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
   <link href="../../assets/bootstrap-theme.css" rel="stylesheet" type="text/css" />
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="../../assets/bootstrap.js" rel="stylesheet"></script>
+   <script src="../../assets/bootstrap.min.js" rel="stylesheet"></script>
+
   
  	<!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -38,6 +40,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      
 
       <a class="navbar-brand" href="#"> <i class="fa fa-cab"></i> ActiveCab</a>
     </div>
@@ -107,8 +110,9 @@
 <!---->
   
 </footer>
-  <script src="../../assets/bootstrap.min.js"></script>
-  <script src="../../assets/bootstrap.js"></script>
+  <script src="../../assets/bootstrap.min.js" rel="stylesheet"></script>
+  <script src="../../assets/bootstrap.js" rel="stylesheet"></script>
 
 
 </html>
+
