--- a/ProyectoPBD/app/views/home/index.html.erb
+++ b/ProyectoPBD/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
             <div class="carousel-caption">
               <h1><b>ActiveCab</b></h1>
               <p>Un servicio de alta velocidad y comodidad <code>http://www.activecab.cl</code> Pide un taxi sin necesidad de gastar en una llamada telefónica</p>
-              <p><a class="btn btn-lg btn-primary" href="cliente/solicitud" role="button">Pide un taxi AQUÍ</a></p>
+              <p><a class="btn btn-lg btn-primary" href="../cliente/solicitud" role="button">Pide un taxi AQUÍ</a></p>
             </div>
           </div>
         </div>
@@ -27,7 +27,7 @@
             <div class="carousel-caption">
               <b><h1>Confía en la experiencia.</h1></b>
               <p>Una empresa dedicada con más de 25 años de experiencia y calidad en el área del transporte de pasajeros</p>
-              <p><a class="btn btn-lg btn-primary" href="welcome/qs" role="button">Leer más</a></p>
+              <p><a class="btn btn-lg btn-primary" href="../welcome/qs" role="button">Leer más</a></p>
             </div>
           </div>
         </div>
@@ -38,7 +38,7 @@
             <div class="carousel-caption">
               <p><h1>Precios a tu alcance.</h1></p>
               <p>Paga un precio justo de acuerdo a la distancia recorrida, ActiveCab permite que veas tarifas fijas de acuerdo a tu viaje a realizar</p>
-              <p><a class="btn btn-lg btn-primary" href="welcome/tarifas" role="button">Servicios y tarifas</a></p>
+              <p><a class="btn btn-lg btn-primary" href="../welcome/tarifas" role="button">Servicios y tarifas</a></p>
             </div>
           </div>
         </div>
