--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
   </div>
 </div>
 <!--Fin Cabecera -->
-
+<div class="padre">
 <body>
 <br><br>
 
@@ -79,7 +79,7 @@
 <%= yield %>
 
 </body>
-
+</div>
 
 <hr class="centrado">
 
@@ -96,11 +96,11 @@
       <span class="hide-xs hide-sm">·</span><br class="hide-md hide-lg">
       <i class="fa fa-usd"></i> Cotizar precio <a href="#">Planifica tu viaje</a>
     </div>
-	<div>
+	<div class="fijo1">
 		<br><i class="fa fa-car fa-2x"></i>
-	</div>
-    <div class="amari">    		
-		© Copyright 2014 by ActiveCab. All Rights Reserved. 		
+	</div><br>
+    <div class="amari fijo1">    		
+		  © Copyright 2014 by ActiveCab. All Rights Reserved. 		
 	</div>
   </div>
   <!-- Subir facil -->
