no se que cambié
versión al 12 - 06 - 2014

--- a/ProyectoPBD/app/views/home/index.html.erb
+++ b/ProyectoPBD/app/views/home/index.html.erb
@@ -1,7 +1,3 @@
-<!-- NAVBAR
-================================================== -->
-    <!-- Trans
-    ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -15,8 +11,8 @@
           <div class="container">
             <div class="carousel-caption">
               <h1><b>ActiveCab</b></h1>
-              <p>Un servicio de alta velocidad y comodidad <code>http://www.activecab.cl</code> Pide un taxi sin necesidad de gastar en una llamada telefónica</p>
-              <p><a class="btn btn-lg btn-primary" href="../cliente/solicitud" role="button">Pide un taxi AQUÍ</a></p>
+              <p>Un servicio de alta velocidad y comodidad <code>http://www.activecab.cl</code> Pida un taxi sin necesidad de gastar en una llamada telefónica</p>
+              <p><a class="btn btn-lg btn-primary" href="../cliente/solicitud" role="button">Pida un taxi AQUÍ</a></p>
             </div>
           </div>
         </div>
@@ -53,11 +49,13 @@
       <hr class="featurette-divider">
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Trabaja con nosotros <span class="text-muted">ActiveCab.</span></h2>
+          <p class="lead">¿Necesitas un servicio de transporte para tu empresa?, ActiveCab tiene la solución, realiza un convenio con nosotros y tendrás los mejores precios.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        <br><br><br><br><br><br><br>
+          <img src="../../assets/logo1.jpg" alt="" class="img-rounded cent-ver" height="80px">
+
         </div>
       </div>
 
