--- a/ProyectoPBD/app/views/operador/solicitudes.html.erb
+++ b/ProyectoPBD/app/views/operador/solicitudes.html.erb
@@ -11,7 +11,8 @@
 				  	<li> <%=link_to "Lista de usuarios registrados", :controller => :operador, :action => :usuarios_reg %> </li>
 
 				</ul>
-    
+    		
+    		<%=@origen2 %>
 
             </div>
 
