--- a/ProyectoPBD/app/views/home/index.html.erb
+++ b/ProyectoPBD/app/views/home/index.html.erb
@@ -50,7 +50,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Trabaja con nosotros <span class="text-muted">ActiveCab.</span></h2>
-          <p class="lead">¿Necesitas un servicio de transporte para tu empresa?, ActiveCab tiene la solución, realiza un convenio con nosotros y tendrás los mejores precios.</p>
+          <p class="lead">¿Necesitas un servicio de transporte para tu empresa?, ActiveCab tiene la solución, realiza un convenio con nosotros y <b>consigue</b> los <b>mejores precios</b>.</p>
         </div>
         <div class="col-md-5">
         <br><br><br><br><br><br><br>
