--- a/ProyectoPBD/app/views/operador/index.html.erb
+++ b/ProyectoPBD/app/views/operador/index.html.erb
@@ -7,9 +7,7 @@
 				  <li class="active"> <%=link_to "Distancia y valor", :controller => :operador, :action => :index %> </li>
 				  <li> <%=link_to "Disponibilidad de conductores", :controller => :operador, :action => :disp_conductor %> </li>
 				  <li> <%=link_to "Lista de solicitudes", :controller => :operador, :action => :solicitudes %> </li>
-				  <li> <%=link_to "Lista de usuarios registrados", :controller => :operador, :action => :usuarios_reg %> </li>
-
-								
+				  <li> <%=link_to "Lista de usuarios registrados", :controller => :operador, :action => :usuarios_reg %> </li>		
 				</ul>
 			</div>
 			<div class = "col-lg-6">
@@ -20,21 +18,17 @@
 				<%= text_field_tag 'destino', @destino %></p>
 				<%= submit_tag 'Solicitar tiempo y distancia' %>
 				<% end %>
-
 				<br>
-				<p>Origen: <%= @origin_addresses%></p>
-				<p>Destino: <%= @destination_addresses%></p>
+				<p><h4><b>Origen:</b><%= @origin_addresses%></h4></p>
+				<p><h4><b>Destino: </b><%= @destination_addresses%></h4></p>
 				<p>Si las direcciones no son correctas ingrese mayor información de origen y/o destino</p>
-				
-				<p>Distancia: <%= @distance_km%> Kms.</p>
-				<p>Duracion: <%= @duration_min%> minutos</p>
-				<p>Estado: <%= @status%></p>
+				<p><h4><b>Distancia: </b><%=@distance_km%> Kms.</h4></p>
+				<p><h4><b>Tiempo de viaje estimado: </b><%=@duration_min%> minutos</h4></p>
+				<p>Status: <%= @status%></p>
 				<!--<p>result: <%= $result%></p>-->
 			</div>
     	</div>
-
 	</div>      
-
 </div>
 
 
