--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -73,8 +73,8 @@
 <div class="padre">
 <body>
 <br><br>
-
-
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
 <%= yield %>
 
