--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -11,8 +11,6 @@
   <link href="../../assets/bootstrap-theme.min.css" rel="stylesheet" type="text/css" />
   <link href="../../assets/bootstrap-theme.css" rel="stylesheet" type="text/css" />
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <script src="../../assets/bootstrap.js" rel="stylesheet"></script>
-   <script src="../../assets/bootstrap.min.js" rel="stylesheet"></script>
 
   
  	<!-- Just for debugging purposes. Don't actually copy this line! -->
@@ -181,6 +179,7 @@
 </footer>
   <script src="../../assets/bootstrap.min.js" rel="stylesheet"></script>
   <script src="../../assets/bootstrap.js" rel="stylesheet"></script>
+  <script type="text/javascript" src="../../assets/bootstrap.js"></script>
 
 
 </html>
