--- a/ProyectoPBD/app/views/owners/index.html.erb
+++ b/ProyectoPBD/app/views/owners/index.html.erb
@@ -1,5 +1,24 @@
 <h1>Listing owners</h1>
 
+<%@owners.each do |n| %>
+
+<ul>
+      <li><strong>Nombre: <%=n.nom_prop%></strong><br></li>
+      <li><strong>Apellidos: <%=n.apells_prop%></strong><br></li>
+      <li><strong>Telefono 1: <%=n.tel1_prop%></strong><br></li>
+      <li><strong>Telefono 2: <%=n.tel2_prop%></strong><br></li>
+      <li><strong>Email: <%=n.email_prop%></strong><br></li>
+      
+
+
+
+</ul>     
+<%end%>
+
+
+
+
+
 <table>
   <thead>
     <tr>
