--- a/ProyectoPBD/app/views/welcome/qs.html.erb
+++ b/ProyectoPBD/app/views/welcome/qs.html.erb
@@ -145,6 +145,28 @@
         </div>
     </section>
     -->
+
+
+<%@owners.each do |n| %>
+<!-- Split button -->
+<div class="btn-group">
+  <button type="button" class="btn btn-danger">Action</button>
+  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
+    <span class="caret"></span>
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+			<li><strong>Nombre: <%=n.nom_prop%></strong><br></li>
+			<li><strong>Apellidos: <%=n.apells_prop%></strong><br></li>
+			<li><strong>Telefono 1: <%=n.tel1_prop%></strong><br></li>
+			<li><strong>Telefono 2: <%=n.tel2_prop%></strong><br></li>
+			<li><strong>Email: <%=n.email_prop%></strong><br></li>
+  </ul>
+</div>
+<%end%>
+
+
+
 </div>
 
 
