Modificación de seed + despliegue bd comunnes
Para poblar la tabla comunnes solo se debe ejecutar el comando rake
db:seed y se ejecutara el seed con cada una de las comunas de santiago

--- a/ProyectoPBD/app/views/welcome/qs.html.erb
+++ b/ProyectoPBD/app/views/welcome/qs.html.erb
@@ -147,7 +147,6 @@
     -->
 
 
-<%@owners.each do |n| %>
 <!-- Split button -->
 <div class="btn-group">
   <button type="button" class="btn btn-danger">Action</button>
@@ -155,15 +154,20 @@
     <span class="caret"></span>
     <span class="sr-only">Toggle Dropdown</span>
   </button>
+
   <ul class="dropdown-menu" role="menu">
+  <%@owners.each do |n| %>
+
 			<li><strong>Nombre: <%=n.nom_prop%></strong><br></li>
-			<li><strong>Apellidos: <%=n.apells_prop%></strong><br></li>
+		<!--	<li><strong>Apellidos: <%=n.apells_prop%></strong><br></li>
 			<li><strong>Telefono 1: <%=n.tel1_prop%></strong><br></li>
 			<li><strong>Telefono 2: <%=n.tel2_prop%></strong><br></li>
-			<li><strong>Email: <%=n.email_prop%></strong><br></li>
+			<li><strong>Email: <%=n.email_prop%></strong><br></li> -->
+  <%end%>
+
   </ul>
+
 </div>
-<%end%>
 
 
 
