--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -179,7 +179,7 @@
 </footer>
   <script src="../../assets/bootstrap.min.js" rel="stylesheet"></script>
   <script src="../../assets/bootstrap.js" rel="stylesheet"></script>
-  <script type="text/javascript" src="../../assets/bootstrap.js"></script>
+  <script src="../../assets/bootstrap.js" type="text/javascript" ></script>
 
 
 </html>
