--- a/ProyectoPBD/app/views/home/index.html.erb
+++ b/ProyectoPBD/app/views/home/index.html.erb
@@ -43,18 +43,18 @@
       <a class="right carousel-control" href="#myCarousel" data-slide="next"><span <i class="fa fa-angle-double-right flecha"></i></span></a>
     </div>
 
-<!--Fin trans -->
+<!--Fin trans carrusel -->
 <!--Resto página-->
 
-    <div class="container marketing">
+    <div class="container marketing marg1">
       <hr class="featurette-divider">
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Trabaja con nosotros <span class="text-muted">ActiveCab.</span></h2>
-          <p class="lead">¿Necesitas un servicio de transporte para tu empresa?, ActiveCab tiene la solución, realiza un convenio con nosotros y <b>consigue</b> los <b>mejores precios</b>.</p>
+          <p class="lead">¿Necesitas un servicio de transporte para tu empresa?, ActiveCab tiene la solución, realiza un convenio con nosotros y consigue los <b>mejores precios</b>.</p>
         </div>
         <div class="col-md-5">
-        <br><br><br><br><br><br><br>
+        <br><br><br><br><br>
           <img src="../../assets/logo1.jpg" alt="" class="img-rounded cent-ver" height="80px">
 
         </div>
@@ -64,11 +64,14 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img src="../../assets/phone.png" alt="" class="img-rounded cent-ver" height="100%">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Solicitar viajes en radio taxi nunca fue tan fácil. <span class="text-muted">Pruebalo tu mismo!.</span></h2>
+          <p class="lead">
+            Prueba el Sistema de ActiveCab y solicita tu viaje llenando un <b>sencillo</b> formulario, y espera nuestra respuesta 
+
+          </p>
         </div>
       </div>
 
@@ -77,10 +80,12 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">
+              
+          </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img src="../../assets/logo.jpg" alt="" class="img-circle cent-ver" height="200px">
         </div>
       </div>
 
