--- a/ProyectoPBD/app/assets/stylesheets/bootstrap.css
+++ b/ProyectoPBD/app/assets/stylesheets/bootstrap.css
@@ -10,6 +10,20 @@
 
 
 }
+
+.marg1{
+  border-left: 1px solid #F0B81D;  
+  border-right: 1px solid #F0B81D;
+  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); /* IE6-9 */
+
+
+}
 #IrArriba {
 position: fixed;
 bottom: 30px;
@@ -68,6 +82,12 @@ footer{
   margin-bottom: 0rem; 
   padding-bottom: 4rem;
   height: 20rem;
+  border-top: 1px solid #F0B81D;
+}
+
+.bl1{
+  border-bottom: 1px solid #F0B81D;
+
 }
 .fa-car:hover,.amari:hover{
      color: yellow;
