--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 
 
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-inverse navbar-fixed-top bl1" role="navigation">
   <div class="container">
     
 
@@ -81,6 +81,8 @@
 
 
 <!--Fin cabecera conectado-->
+
+
 <% else %>
 
 
@@ -140,15 +142,17 @@
   <!--<p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 -->
+<!-- Inicio de yield -->
+
 
 
 <%= yield %>
- <p class="notice"><%= notice %></p>
- <p class="alert"><%= alert %></p>
+  
+     
+<!--Fin de yield -->
+
 </body>
 </div>
-
-<hr class="centrado">
 
 <footer id="footer" class="footer hidden-print">
 <br>
