Más detalles, fixed_rates y vistas
algo se agrego

--- a/ProyectoPBD/app/assets/stylesheets/bootstrap.css
+++ b/ProyectoPBD/app/assets/stylesheets/bootstrap.css
@@ -5,6 +5,10 @@
  */
 
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
+*{
+  margin:0px;
+
+}
 .padre{
   min-height: 800px;
 
@@ -15,15 +19,27 @@
   border-left: 1px solid #F0B81D;  
   border-right: 1px solid #F0B81D;
   background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); /* IE6-9 */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); /* IE6-9 */
 
 
 }
+
+.marg2{
+  background-color: #fff;
+  padding-top: 0px;
+  margin: 0 auto;
+  height: 100%;
+  min-height: 800px;
+
+
+
+}
+
 #IrArriba {
 position: fixed;
 bottom: 30px;
@@ -61,6 +77,12 @@ background: url(http://lh5.googleusercontent.com/-luDGEoQ_WZE/T1Ak-gta5MI/AAAAAA
   color:#000;
   border: 1px solid #F0B81D ;
   
+
+}
+
+.shd{
+  box-shadow: 0 0 6px #ccc;
+
 
 }
 .center{
