--- a/ProyectoPBD/app/views/home/index.html.erb
+++ b/ProyectoPBD/app/views/home/index.html.erb
@@ -42,11 +42,9 @@
       <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span <i class="fa fa-angle-double-left flecha"></i></span></a>
       <a class="right carousel-control" href="#myCarousel" data-slide="next"><span <i class="fa fa-angle-double-right flecha"></i></span></a>
     </div>
-
 <!--Fin trans carrusel -->
 <!--Resto página-->
-
-    <div class="container marketing marg1">
+    <div class="container marketing marg2">
       <hr class="featurette-divider">
       <div class="row featurette">
         <div class="col-md-7">
@@ -64,12 +62,12 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img src="../../assets/phone.png" alt="" class="img-rounded cent-ver" height="100%">
+          <img src="../../assets/phone.png" alt="" class="img-rounded cent-ver shd" height="100%">
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">Solicitar viajes en radio taxi nunca fue tan fácil. <span class="text-muted">Pruebalo tu mismo!.</span></h2>
           <p class="lead">
-            Prueba el Sistema de ActiveCab y solicita tu viaje llenando un <b>sencillo</b> formulario, y espera nuestra respuesta 
+            Prueba el Sistema de ActiveCab y solicita tu viaje llenando un <b>sencillo</b> formulario, y espera nuestra respuesta. 
 
           </p>
         </div>
