--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -136,7 +136,7 @@
 <% end %>
 
 <!--Fin Cabecera -->
-<div class="padre">
+<div class="padre marg1">
 <body>
 <br><br>
   <!--<p class="notice"><%= notice %></p>
