--- a/ProyectoPBD/app/views/welcome/qs.html.erb
+++ b/ProyectoPBD/app/views/welcome/qs.html.erb
@@ -1,9 +1,8 @@
+<div class="container marg2">
 <br>
 <h1>¿Qué es ActiveCab?</h1>
 <hr class="centrado">
 <br><br>
-
-<div class="container">
         <div class="row">
             <div class="col-lg-12 ">
 				<div class="row">
@@ -20,11 +19,13 @@
 						<p> Radio Taxis Marcelino es una empresa comprometida a brindar el mejor servicio para el usuario, entregando un grato y sencillo medio para solicitar radio taxis</p>
 						</div><br>
 					</div>
-					<div class="col-lg-6 col-md-8 borde col-xs-12">
-						<i><h2>Radio Taxis Marcelino 3</h2></i><br>
-						<p>Con 25 años de experiencia en el transporte de pasajeros nos ha hecho una Empresa conocedora de los más altos requerimientos de los usuarios de este medio.
-						Contamos con una moderna flota de automóviles full equipo y transporte masivo de pasajeros (Van, Minibuses y Buses). Conductores profesionales, seleccionados rigurosamente por nuestro departamento de personal, dando plena seguridad al desplazamiento de nuestros clientes.</p>
-						<div class="autito"><i class="fa fa-taxi fa-5x"></i><br><b><i>ActiveCab</i></b></div>
+					<div class="col-lg-6 col-md-8 col-xs-12">
+						<div class="borde">
+							<i><h2>Radio Taxis Marcelino 3</h2></i><br>
+							<p>Con 25 años de experiencia en el transporte de pasajeros nos ha hecho una Empresa conocedora de los más altos requerimientos de los usuarios de este medio.
+							Contamos con una moderna flota de automóviles full equipo y transporte masivo de pasajeros (Van, Minibuses y Buses). Conductores profesionales, seleccionados rigurosamente por nuestro departamento de personal, dando plena seguridad al desplazamiento de nuestros clientes.</p>
+							<div class="autito"><i class="fa fa-taxi fa-5x"></i><br><b><i>ActiveCab</i></b></div>
+						</div>
 					</div>
 
 				</div>	
@@ -148,27 +149,18 @@
 
 
 <!-- Split button -->
-<div class="btn-group">
+<!--<div class="btn-group">
   <button type="button" class="btn btn-danger">Action</button>
   <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
     <span class="caret"></span>
     <span class="sr-only">Toggle Dropdown</span>
   </button>
 
-  <ul class="dropdown-menu" role="menu">
-  <%@owners.each do |n| %>
-
-			<li><strong>Nombre: <%=n.nom_prop%></strong><br></li>
-		<!--	<li><strong>Apellidos: <%=n.apells_prop%></strong><br></li>
-			<li><strong>Telefono 1: <%=n.tel1_prop%></strong><br></li>
-			<li><strong>Telefono 2: <%=n.tel2_prop%></strong><br></li>
-			<li><strong>Email: <%=n.email_prop%></strong><br></li> -->
-  <%end%>
-
-  </ul>
+  -->
+  <br><br><br><br>
+<br><br><br><br>
 
 </div>
-
 
 
 </div>
