--- a/ProyectoPBD/app/assets/stylesheets/admin.css.scss
+++ b/ProyectoPBD/app/assets/stylesheets/admin.css.scss
@@ -12,6 +12,12 @@
 }
 .img-borde:hover{
 	border: 10px solid green;
+	transition: all 0.3s ease 0s;
+	transition-property: all;
+	transition-duration: 0.3s;
+	transition-timing-function: ease;
+	transition-delay: 0s;
+
 	
 
 }
