--- a/ProyectoPBD/app/assets/stylesheets/bootstrap.css
+++ b/ProyectoPBD/app/assets/stylesheets/bootstrap.css
@@ -16,8 +16,6 @@
 }
 
 .marg1{
-  border-left: 1px solid #F0B81D;  
-  border-right: 1px solid #F0B81D;
   background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
@@ -35,8 +33,15 @@
   margin: 0 auto;
   height: 100%;
   min-height: 800px;
+  margin-top: 0px;
 
 
+
+}
+
+.marg3{
+  margin-bottom: 0px;
+  padding-bottom: 0px;
 
 }
 
